refactor(mgmt): remove deprecated /clear routes in favor of DELETE /logs
